// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a selected menu link correctly 1`] = `
<Link
  className="src-modules-header-components-menu-link__link-selected src-modules-header-components-menu-link__link"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  replace={false}
  role="menuitem"
  tabIndex="-1"
  to="/to/path"
>
  The Label
</Link>
`;

exports[`should render an unselected menu link correctly 1`] = `
<Link
  className="src-modules-header-components-menu-link__link"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  replace={false}
  role="menuitem"
  tabIndex="-1"
  to="/to/path"
>
  The Label
</Link>
`;
